# bedrock-agentcore-learn

./: .gitignore
agentcore_memory/: main.py  pyproject.toml
cdk_agentcore/: cdk.json  package-lock.json  package.json
cdk_agentcore/agent/: Dockerfile  main.py
cdk_agentcore/lib/: cdk_agentcore-stack.ts
cdk_agentcore/test/: cdk_agentcore.test.ts
hello_agentcore/: pyproject.toml
pantry-agent-test/: main.py  pyproject.toml
pantry-agent-test/src/: agent_executor.py  inventory_agent.py  main.py  recipe_agent.py  shopping_list_agent.py  stream_handler.py
